# ygo-coolstuff

./: .gitignore  README.md  Sky Striker R.B.ydk  Template.xlsx  cards.txt  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
db/: card_database.db
docs/: development_plan.md  tui_plan.md
legacy/: index.py
src/: __main__.py
src/cli/: __init__.py  app.py  app.tcss  collections_screen.py  import_screen.py  output.py  search_screen.py
src/cli/screens/: __init__.py  collections_screen.py  confirm_prompt_screen.py  home_screen.py  import_screen.py  input_prompt_screen.py  search_screen.py
src/cli/ui/: __init__.py  messages.py  mode_state.py
src/cli/widgets/: __init__.py  results_table.py  search_input.py  status_bar.py  title_bar.py
src/image_viewer/: __init__.py  cache.py  loader.py  modal.py  pipeline.py  widget.py
src/models/: __init__.py  cards.py  db_models.py
src/parsers/: __init__.py  file_parser.py
src/scraper/: __init__.py  scraper.py
src/services/: __init__.py  excel_export.py  scraper.py  ygopro_api.py
src/usecases/: __init__.py  collections.py  file_parser.py  home_summary.py  search_cards.py  ydk_import.py
src/utils/: __init__.py  app_dirs.py  constants.py  file_cache.py  utils.py
