[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coolstuffscrape"
version = "0.1.0"
description = "Terminal UI for managing card collections and exporting to Excel"
authors = [
    {name = "Pedro", email = "87550035+odiseo0@users.noreply.github.com"},
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "aiofiles>=25.1.0",
    "rich>=14.3.1",
    "textual>=0.80.0",
    "aiosqlite>=0.22.1",
    "openpyxl>=3.1.5",
    "pillow>=12.1.1",
    "platformdirs>=4.0.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["textual-dev>=1.8.0"]

[project.scripts]
coolstuffscrape = "src.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["data/*.xlsx"]

[tool.pdm]
distribution = false
